Correct odd menu spacing part 1(#2)
* Correct odd menu spacing 

Removing this width corrects odd menu spacing on both Firefox desktop and mobile.

* Prevent smashing pn Chrome

--- a/theme/zeta.css
+++ b/theme/zeta.css
@@ -228,7 +228,7 @@ color:#688b6a;
 display:block;
 padding:4px .25em;
 position:relative;
-width:9em;
+padding-right:14px;
 }
 
 .drop_menu a:hover {
